// =====================================================
// SIGNALYX - ERD (dbdiagram.io DBML)
// Crypto/Forex AI Platform
// Paste toàn bộ file này vào https://dbdiagram.io
// =====================================================

// -----------------------------
// 1. USERS & AUTH
// -----------------------------
Table users {
  id uuid [pk, default: `gen_random_uuid()`]
  email varchar(255) [unique, not null]
  password_hash varchar(255) [note: 'null nếu login qua OAuth']
  username varchar(100) [unique, not null]
  avatar_url text
  role user_role [not null, default: 'user']
  status user_status [not null, default: 'active']
  email_verified_at timestamp
  last_login_at timestamp
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
  deleted_at timestamp [note: 'soft delete']

  indexes {
    email
    username
  }
}

Enum user_role {
  admin
  editor
  user
}

Enum user_status {
  active
  suspended
  banned
}

Table oauth_accounts {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null, ref: > users.id]
  provider oauth_provider [not null]
  provider_user_id varchar(255) [not null]
  access_token text
  refresh_token text
  expires_at timestamp
  created_at timestamp [not null, default: `now()`]

  indexes {
    (provider, provider_user_id) [unique]
  }
}

Enum oauth_provider {
  google
  github
}

Table refresh_tokens {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null, ref: > users.id]
  token_hash varchar(255) [not null]
  device_info varchar(255)
  ip_address varchar(45)
  expires_at timestamp [not null]
  revoked_at timestamp
  created_at timestamp [not null, default: `now()`]

  indexes {
    user_id
    token_hash [unique]
  }
}

Table user_preferences {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [unique, not null, ref: - users.id]
  theme varchar(20) [default: 'dark']
  language varchar(10) [default: 'vi']
  favorite_symbols text [note: 'JSON array symbol mặc định hiển thị']
  notification_settings jsonb [note: '{"price_alert": true, "news_digest": false, ...}']
  timezone varchar(50) [default: 'Asia/Ho_Chi_Minh']
  updated_at timestamp [not null, default: `now()`]
}

// -----------------------------
// 2. MARKET REFERENCE DATA
// -----------------------------
Table assets {
  id uuid [pk, default: `gen_random_uuid()`]
  symbol varchar(20) [not null, unique, note: 'BTCUSDT, EURUSD, XAUUSD...']
  display_name varchar(100) [not null]
  asset_type asset_type [not null]
  base_currency varchar(10)
  quote_currency varchar(10)
  exchange_source varchar(50) [note: 'binance, twelvedata...']
  is_active boolean [not null, default: true]
  created_at timestamp [not null, default: `now()`]

  indexes {
    symbol
    asset_type
  }
}

Enum asset_type {
  crypto
  forex
  commodity
  index
}

Table ohlcv_candles {
  id bigint [pk, increment]
  asset_id uuid [not null, ref: > assets.id]
  timeframe candle_timeframe [not null]
  open_time timestamp [not null]
  open decimal(20,8) [not null]
  high decimal(20,8) [not null]
  low decimal(20,8) [not null]
  close decimal(20,8) [not null]
  volume decimal(24,8) [not null]
  created_at timestamp [not null, default: `now()`]

  indexes {
    (asset_id, timeframe, open_time) [unique, name: 'idx_candle_unique']
    open_time
  }

  note: 'Bảng lớn nhất hệ thống -> cân nhắc partition theo thời gian hoặc dùng TimescaleDB'
}

Enum candle_timeframe {
  m1
  m5
  m15
  h1
  h4
  d1
}

Table watchlists {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null, ref: > users.id]
  asset_id uuid [not null, ref: > assets.id]
  note text
  created_at timestamp [not null, default: `now()`]

  indexes {
    (user_id, asset_id) [unique]
  }
}

Table price_alerts {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null, ref: > users.id]
  asset_id uuid [not null, ref: > assets.id]
  condition alert_condition [not null]
  target_price decimal(20,8) [not null]
  status alert_status [not null, default: 'active']
  triggered_at timestamp
  created_at timestamp [not null, default: `now()`]
}

Enum alert_condition {
  above
  below
}

Enum alert_status {
  active
  triggered
  cancelled
}

// -----------------------------
// 3. NEWS AGGREGATION
// -----------------------------
Table news_sources {
  id uuid [pk, default: `gen_random_uuid()`]
  name varchar(100) [not null]
  source_type source_type [not null]
  feed_url text [not null]
  is_active boolean [not null, default: true]
  fetch_interval_minutes int [not null, default: 15]
  last_fetched_at timestamp
  created_at timestamp [not null, default: `now()`]
}

Enum source_type {
  rss
  api
  scraper
}

Table news_articles {
  id uuid [pk, default: `gen_random_uuid()`]
  source_id uuid [not null, ref: > news_sources.id]
  title varchar(500) [not null]
  summary text [note: 'tóm tắt, KHÔNG lưu full nội dung để tránh vi phạm bản quyền']
  original_url text [not null, unique]
  thumbnail_url text
  published_at timestamp [not null]
  sentiment_score decimal(4,3) [note: '-1.0 (tiêu cực) đến 1.0 (tích cực), do AI service tính']
  related_assets uuid[] [note: 'mảng asset_id liên quan, hoặc dùng bảng join riêng nếu cần chuẩn hóa']
  is_featured boolean [not null, default: false]
  created_at timestamp [not null, default: `now()`]

  indexes {
    published_at
    source_id
    original_url [unique]
  }
}

Table news_article_assets {
  news_article_id uuid [not null, ref: > news_articles.id]
  asset_id uuid [not null, ref: > assets.id]

  indexes {
    (news_article_id, asset_id) [pk]
  }

  note: 'Bảng join chuẩn hóa thay cho mảng related_assets nếu cần query mạnh'
}

// -----------------------------
// 4. ECONOMIC CALENDAR
// -----------------------------
Table economic_events {
  id uuid [pk, default: `gen_random_uuid()`]
  country_code varchar(5) [not null, note: 'US, EU, VN...']
  event_name varchar(255) [not null]
  impact_level impact_level [not null]
  event_time timestamp [not null]
  actual_value varchar(50)
  forecast_value varchar(50)
  previous_value varchar(50)
  unit varchar(20)
  source varchar(50) [note: 'tradingeconomics, fmp...']
  created_at timestamp [not null, default: `now()`]

  indexes {
    event_time
    (country_code, impact_level)
  }
}

Enum impact_level {
  low
  medium
  high
}

// -----------------------------
// 5. AI CHATBOT (RAG)
// -----------------------------
Table kb_documents {
  id uuid [pk, default: `gen_random_uuid()`]
  title varchar(255) [not null]
  category varchar(100) [note: 'crypto_basics, forex_basics, indicator, risk_management...']
  content text [not null, note: 'nội dung gốc tự viết/nguồn mở, dùng để chunk & embed']
  source_reference text
  version int [not null, default: 1]
  is_published boolean [not null, default: true]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table kb_chunks {
  id uuid [pk, default: `gen_random_uuid()`]
  document_id uuid [not null, ref: > kb_documents.id]
  chunk_index int [not null]
  content text [not null]
  vector_id varchar(255) [note: 'ID tương ứng bên Vector DB (Qdrant/Chroma), KHÔNG lưu vector ở đây']
  token_count int
  created_at timestamp [not null, default: `now()`]

  indexes {
    document_id
    vector_id
  }

  note: 'Vector embedding thật lưu ở Qdrant/Chroma, bảng này chỉ giữ metadata liên kết'
}

Table chat_sessions {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [ref: > users.id, note: 'null nếu chat ẩn danh/guest']
  title varchar(255)
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  indexes {
    user_id
  }
}

Table chat_messages {
  id uuid [pk, default: `gen_random_uuid()`]
  session_id uuid [not null, ref: > chat_sessions.id]
  role message_role [not null]
  content text [not null]
  retrieved_chunk_ids uuid[] [note: 'các kb_chunks được RAG dùng để trả lời, phục vụ audit/explainability']
  model_used varchar(100) [note: 'llama-3.1-70b, gemini-1.5-flash...']
  latency_ms int
  token_usage int
  feedback message_feedback
  created_at timestamp [not null, default: `now()`]

  indexes {
    session_id
    created_at
  }
}

Enum message_role {
  user
  assistant
  system
}

Enum message_feedback {
  up
  down
  none
}

// -----------------------------
// 6. ML PREDICTION SYSTEM
// -----------------------------
Table ml_models {
  id uuid [pk, default: `gen_random_uuid()`]
  name varchar(100) [not null, note: 'xgboost_trend_v1, lstm_trend_v2...']
  model_type varchar(50) [not null, note: 'xgboost, lstm, gru, tft...']
  asset_type asset_type [not null]
  target_timeframe candle_timeframe [not null]
  version varchar(20) [not null]
  status model_status [not null, default: 'staging']
  artifact_path text [not null, note: 'đường dẫn model file / HuggingFace Hub repo']
  training_dataset_range varchar(100) [note: '2020-01-01 to 2024-12-31']
  metrics jsonb [note: '{"precision":0.61,"recall":0.58,"f1":0.59,"backtest_return":0.12,"max_drawdown":-0.08}']
  trained_at timestamp [not null]
  created_at timestamp [not null, default: `now()`]

  indexes {
    (name, version) [unique]
    status
  }

  note: 'Model registry - mọi version đều lưu lại metrics để so sánh & rollback'
}

Enum model_status {
  staging
  production
  deprecated
}

Table predictions {
  id uuid [pk, default: `gen_random_uuid()`]
  model_id uuid [not null, ref: > ml_models.id]
  asset_id uuid [not null, ref: > assets.id]
  predicted_at timestamp [not null, note: 'thời điểm model đưa ra dự đoán']
  target_time timestamp [not null, note: 'thời điểm dự đoán áp dụng cho (vd +4h)']
  predicted_label prediction_label [not null]
  confidence decimal(5,4) [not null, note: '0.0 - 1.0']
  features_snapshot jsonb [note: 'lưu lại input feature lúc predict để audit/debug']
  actual_label prediction_label [note: 'điền sau khi target_time qua, dùng để đánh giá model theo thời gian thực']
  is_correct boolean [note: 'tính sau khi có actual_label']
  created_at timestamp [not null, default: `now()`]

  indexes {
    (asset_id, predicted_at)
    model_id
    target_time
  }

  note: 'Bảng cực quan trọng: cho phép đo hiệu năng model thực tế theo thời gian, không chỉ backtest offline'
}

Enum prediction_label {
  up
  down
  sideways
}

// -----------------------------
// 7. TRADE SUGGESTIONS (Future)
// -----------------------------
Table trade_suggestions {
  id uuid [pk, default: `gen_random_uuid()`]
  prediction_id uuid [not null, ref: > predictions.id]
  asset_id uuid [not null, ref: > assets.id]
  direction trade_direction [not null]
  entry_price decimal(20,8) [not null]
  stop_loss decimal(20,8) [not null]
  take_profit decimal(20,8) [not null]
  risk_reward_ratio decimal(6,2)
  rationale text [not null, note: 'giải thích ngắn gọn lý do gợi ý, sinh từ rule-based + model output']
  disclaimer_shown boolean [not null, default: true]
  status suggestion_status [not null, default: 'open']
  closed_price decimal(20,8)
  closed_at timestamp
  pnl_percent decimal(8,4)
  created_at timestamp [not null, default: `now()`]

  indexes {
    asset_id
    status
    created_at
  }

  note: 'Log đầy đủ kết quả thực tế của gợi ý -> minh bạch hiệu năng, phục vụ cả UI hiển thị track record'
}

Enum trade_direction {
  long
  short
}

Enum suggestion_status {
  open
  closed_tp
  closed_sl
  closed_manual
  expired
}

Table user_suggestion_interactions {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null, ref: > users.id]
  suggestion_id uuid [not null, ref: > trade_suggestions.id]
  action interaction_action [not null]
  created_at timestamp [not null, default: `now()`]

  indexes {
    (user_id, suggestion_id)
  }

  note: 'Theo dõi user tương tác với gợi ý (xem/lưu/dismiss) -> dữ liệu cải thiện model sau này'
}

Enum interaction_action {
  viewed
  saved
  dismissed
}

// -----------------------------
// 8. SYSTEM / AUDIT
// -----------------------------
Table api_request_logs {
  id bigint [pk, increment]
  user_id uuid [ref: > users.id]
  endpoint varchar(255) [not null]
  method varchar(10) [not null]
  status_code int
  latency_ms int
  ip_address varchar(45)
  created_at timestamp [not null, default: `now()`]

  indexes {
    created_at
    user_id
  }

  note: 'Có thể thay bằng giải pháp logging chuyên dụng (ELK/Sentry) ở production, bảng này chỉ audit tối thiểu trong DB'
}

Table external_api_usage {
  id uuid [pk, default: `gen_random_uuid()`]
  provider varchar(100) [not null, note: 'newsapi, alphavantage, groq...']
  endpoint varchar(255)
  request_count int [not null, default: 1]
  window_date date [not null]
  created_at timestamp [not null, default: `now()`]

  indexes {
    (provider, window_date) [unique]
  }

  note: 'Theo dõi quota free-tier đã dùng trong ngày -> tránh vượt giới hạn API miễn phí'
}
